--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 *{
     background-color: #e0e1dd;
 }
+h2{
+    font-size: 16px;
+}
+h3{
+    font-size: 14px;
+}
 
 
 body{
@@ -25,7 +31,17 @@ body{
 #instrucciones{
     border: 3.5px solid #3D5820;
     margin-top: 60px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     width: 50%;
     text-align: center;
+}
+
+button{
+    color: #3D5820;
+    width: 20%;
+    height: 30%;
+    font-size: 18px;
+    margin-bottom: 5%;
+    border-radius: 40px;
+    padding: 20px;
 }
