--- a/juego.css
+++ b/juego.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
-
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 600;
 }
 
 body{
@@ -12,7 +13,8 @@ body{
     margin-left: 150px;
     margin-top: 50px;
     margin-bottom: 50px;
-    height: 80vh;
+    height: 85vh;
+    border-radius: 10px;
 
 }
 
@@ -31,6 +33,22 @@ body{
     display: flex;
     justify-content: center;
     font-size: 46px;
+    margin: 40px;
+}
+
+#palabra{
+    font-size: 70px;
+    margin-bottom: 50px;
+}
+
+#instrucciones{
+    font-size: 22px;
+}
+
+#usuarioInput{
+    font-size: 50px;
+    margin: 20px;
+    background-color: rgba(255, 255, 255, 0.43);
 }
 
 body{
