--- a/style.css
+++ b/style.css
@@ -53,16 +53,28 @@ body{
 }
 button{
     color: #310648;
-    width: 20%;
+    width: 40%;
     height: 30%;
     font-size: 18px;
-    margin-bottom: 2%;
     border-radius: 40px;
     padding: 20px;
     background-color: #ffffff;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 button:hover{
     background-color: #8d1e7f;
     color: #ffffff;
+}
+#opciones{
+    width: 40%;
+    border-radius: 20px;
+}
+
+#baseTiempo, #vidasBase{
+    margin-left: 25px;
+    height: 50px;
+    width: 120px;
 }
